# pdftoc

./: .gitignore  README.md  TODO.md  pdftoc.py  pyproject.toml
src/: pdftoc.py
test/: test_pdfpy.py  test_toc_txt.py
