[project]
name = "pdftoc"
version = "0.1.0"
description = "A tool for manipulating outlines/table of content (TOC) in pdf files"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=6.13.2",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

